@@ -13,6 +13,9 @@ Release 2.6.0 - 2014-11-18
     tasks below for features and contributors).
 
   IMPROVEMENTS
+    HDFS-9106. Transfer failure during pipeline recovery causes permanent
+    write failures (kihwal)
+
     HDFS-9958. BlockManager#createLocatedBlocks can throw NPE for corruptBlocks
     on failed storages. (Kuhu Shukla via kihwal)
 
